# Gotham

./: README.md  pyproject.toml
data/: sample_people.csv
src/gotham_mvp/: __init__.py  cli.py
src/gotham_mvp/core/: dataset.py  ingestion.py  ontology.py  resolution.py  search.py
src/gotham_mvp/services/: workspace.py
tests/: __init__.py  test_workspace.py
